# tsne-mlx

./: .gitignore  README.md  benchmark.py  fashion_mnist_anim.py  pyproject.toml  quick_bench.py  quick_test.py  verify.py
tsne_mlx/: __init__.py  tsne.py
