[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsne-mlx"
version = "0.1.0"
description = "Pure MLX t-SNE implementation for Apple Silicon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Han Xiao", email = "han.xiao@jina.ai"}
]
dependencies = [
    "mlx>=0.21.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tsne_mlx"]
